<resources>
    <string name="app_name">Text 2n</string>
    <string name="action_settings">Settings</string>
    <string name="switchbtn">Switch</string>
    <string name="inphint">Input goes here</string>
    <string name="basetext">TextView base text</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="share">Share</string>
    <string name="input">Input: </string>
    <string name="output">Output: </string>
</resources>
